# rzv2l_xlnxt_a55

./: CMakeLists.txt  OpenAMP_RPMsg_cfg.h  README.md  main.c  main.cpp  platform_info.c  platform_info.h
cancomm/: CanCodeInfo.h  CanComm.cpp  CanComm.h
inc/libmetal/sysroot-providers/: libmetal
inc/libmetal/usr/include/metal/: alloc.h  atomic.h  cache.h  irq.h  sys.h
inc/open-amp/sysroot-providers/: open-amp
inc/open-amp/usr/include/openamp/: virtqueue.h
inc/open-amp/usr/lib64/: libopen_amp.so.0.1.0
inc/sysfsutils/lib64/: libsysfs.so.2
metal/: condition.h  config.h  io.h  log.h  mutex.h  sleep.h
